se agrego un parrafo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Hola mundo GIT</h1>
     <h2>Sub Titulo</h2>
+    <p>
+        faejfoawelifhnolweifjauhnweifwagblif
+    </p>
 </body>
 </html>
